--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,21 @@
 version: '3.8'
 
 services:
-  app:
-    build:
-      context: .
-    ports:
-      - '3000:3000'
-    environment:
-      - DB_HOST=db
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - JWT_SECRET=${JWT_SECRET}
-    depends_on:
-      - db
+  ## Recommended to run `npm run dev` instead
+  # app:
+  #   build:
+  #     context: .
+  #   ports:
+  #     - '3000:3000'
+  #   environment:
+  #     - DB_HOST=db
+  #     - DB_NAME=${DB_NAME}
+  #     - DB_USER=${DB_USER}
+  #     - DB_PASSWORD=${DB_PASSWORD}
+  #     - JWT_SECRET=${JWT_SECRET}
+  #     - POSTGRES_URL=${POSTGRES_URL}
+  #   depends_on:
+  #     - db
 
   db:
     image: postgres:13
@@ -23,6 +25,8 @@ services:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
+    ports:
+      - "5432:5432"
 
 volumes:
   postgres_data:
