--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,5 @@ DB_NAME=your_database_name
 DB_USER=your_database_user
 DB_PASSWORD=your_database_password
 POSTGRES_URL=postgres://username:password@host:port/database
+DB_QUERY_LOGGING=false
 JWT_SECRET=your_jwt_secret
