--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "node-mocks-http": "^1.15.1",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0"
   }
