--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.3",
+    "axios-mock-adapter": "^2.0.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "react": "^18.3.1",
