--- a/.github/workflows/main_task-manager.yml
+++ b/.github/workflows/main_task-manager.yml
@@ -22,19 +22,21 @@ jobs:
           node-version: '20.x'
 
       - name: npm install, build, and test
+        working-directory: api
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
+        working-directory: api
         run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: api/release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -68,4 +70,6 @@ jobs:
           app-name: 'task-manager'
           slot-name: 'Production'
           package: .
+          clean: true
+          startup-command: node app.js
           
