Supporting Azure SQL interchangeably with Postgres and adjusted routing config for hosting UI on Azure SWA

--- a/api/.env.sample
+++ b/api/.env.sample
@@ -1,9 +1,16 @@
+JWT_SECRET=your_jwt_secret_key
+CORS_ALLOWED_ORIGINS=*
+PORT=8080
+DB_DIALECT=mssql
+DB_QUERY_LOGGING=false
 AZURE_POSTGRESQL_DATABASE=taskmanager
 AZURE_POSTGRESQL_HOST=localhost
 AZURE_POSTGRESQL_PASSWORD=secret
 AZURE_POSTGRESQL_PORT=5432
 AZURE_POSTGRESQL_SSL=false
 AZURE_POSTGRESQL_USER=user
-DB_QUERY_LOGGING=false
-JWT_SECRET=your_jwt_secret_key
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+MYSQL_HOST=localhost
+MYSQL_DATABASE=taskmanager
+MYSQL_USER=user
+MYSQL_PASSWORD=secret
+MYSQL_PORT=1433
