--- a/api/package.json
+++ b/api/package.json
@@ -31,10 +31,12 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.11.0",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "tedious": "^18.6.1",
     "winston": "^3.13.1"
   },
   "devDependencies": {
