--- a/ui/package.json
+++ b/ui/package.json
@@ -85,6 +85,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build:production": "node scripts/build.js --env production",
     "test": "node scripts/test.js --watchAll --coverage --transformIgnorePatterns \"node_modules/(?!msw)/\""
   },
   "eslintConfig": {
@@ -125,7 +126,7 @@
       "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
     ],
     "testEnvironment": "jsdom",
-    "testURL": "http://localhost:5000",
+    "testURL": "http://localhost:8080",
     "transform": {
       "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
