--- a/api/package.json
+++ b/api/package.json
@@ -2,10 +2,11 @@
   "name": "task-manager",
   "version": "1.0.0",
   "description": "A simple task management app",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "ts-node ./app.ts",
+    "dev": "nodemon --watch . --exec \"npx ts-node\" ./app.ts",
+    "build": "npx tsc",
     "test": "jest"
   },
   "repository": {
@@ -27,7 +28,6 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -40,9 +40,18 @@
     "winston": "^3.13.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.5.4",
+    "@types/supertest": "^6.0.2",
+    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "node-mocks-http": "^1.15.1",
     "nodemon": "^3.1.4",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
