--- a/api/package.json
+++ b/api/package.json
@@ -40,12 +40,16 @@
     "winston": "^3.13.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.4",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "node-mocks-http": "^1.15.1",
