--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -7,7 +7,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "resolveJsonModule": true,
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
