--- a/api/.env.sample
+++ b/api/.env.sample
@@ -1,17 +1,31 @@
 JWT_SECRET=your_jwt_secret_key
 CORS_ALLOWED_ORIGINS=*
 PORT=8080
-DB_DIALECT=mssql
+
+# Database provider settings
 DB_QUERY_LOGGING=false
-AZURE_POSTGRESQL_DATABASE=taskmanager
-AZURE_POSTGRESQL_HOST=localhost
-AZURE_POSTGRESQL_PASSWORD=secret
-AZURE_POSTGRESQL_PORT=5432
-AZURE_POSTGRESQL_SSL=false
-AZURE_POSTGRESQL_USER=user
-MYSQL_HOST=localhost
-MYSQL_DATABASE=taskmanager
-MYSQL_USER=user
-MYSQL_PASSWORD=secret
-MYSQL_PORT=1433
-COSMOSDB_CONNECTION_STRING=
+
+# PostgreSQL connection settings
+DB_TYPE=sequelize
+DB_DIALECT=postgres
+POSTGRESQL_DATABASE=taskmanager
+POSTGRESQL_HOST=localhost
+POSTGRESQL_USER=user
+POSTGRESQL_PASSWORD=secret
+POSTGRESQL_PORT=5432
+POSTGRESQL_SSL=true
+
+# SQL connection settings
+DB_TYPE=sequelize
+DB_DIALECT=mssql
+SQL_HOST=localhost
+SQL_DATABASE=taskmanager
+SQL_USER=user
+SQL_PASSWORD=secret
+SQL_PORT=1433
+
+# CosmosDB connection settings
+DB_TYPE=cosmos
+DB_DIALECT=
+COSMOS_CONNECTION_STRING=your-cosmosdb-connection-string
+COSMOS_CONTAINER_ID=task-manager-dev
