--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/gagovictor/task-manager#readme",
   "dependencies": {
+    "@azure/cosmos": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
