--- a/api/.env.sample
+++ b/api/.env.sample
@@ -2,30 +2,33 @@ JWT_SECRET=your_jwt_secret_key
 CORS_ALLOWED_ORIGINS=*
 PORT=8080
 
-# Database provider settings
+# Database provider settings (choose one from below)
 DB_QUERY_LOGGING=false
 
 # PostgreSQL connection settings
-DB_TYPE=sequelize
-DB_DIALECT=postgres
-POSTGRESQL_DATABASE=taskmanager
-POSTGRESQL_HOST=localhost
-POSTGRESQL_USER=user
-POSTGRESQL_PASSWORD=secret
-POSTGRESQL_PORT=5432
-POSTGRESQL_SSL=true
+# DB_TYPE=sequelize
+# DB_DIALECT=postgres
+# POSTGRESQL_DATABASE=taskmanager
+# POSTGRESQL_HOST=localhost
+# POSTGRESQL_USER=user
+# POSTGRESQL_PASSWORD=secret
+# POSTGRESQL_PORT=5432
+# POSTGRESQL_SSL=true
 
 # SQL connection settings
-DB_TYPE=sequelize
-DB_DIALECT=mssql
-SQL_HOST=localhost
-SQL_DATABASE=taskmanager
-SQL_USER=user
-SQL_PASSWORD=secret
-SQL_PORT=1433
+# DB_TYPE=sequelize
+# DB_DIALECT=mssql
+# SQL_HOST=localhost
+# SQL_DATABASE=taskmanager
+# SQL_USER=user
+# SQL_PASSWORD=secret
+# SQL_PORT=1433
 
 # CosmosDB connection settings
-DB_TYPE=cosmos
-DB_DIALECT=
-COSMOS_CONNECTION_STRING=your-cosmosdb-connection-string
-COSMOS_CONTAINER_ID=task-manager-dev
+# DB_TYPE=cosmos
+# COSMOS_CONNECTION_STRING=your-cosmosdb-connection-string
+# COSMOS_CONTAINER_ID=task-manager-dev
+
+# MongoDB connection settings
+DB_TYPE=mongodb
+MONGO_URI=mongodb://your-mongodb-uri
