--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.0",
     "pg": "^8.12.0",
@@ -38,6 +39,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "tedious": "^18.6.1",
+    "uuid": "^10.0.0",
     "winston": "^3.13.1"
   },
   "devDependencies": {
@@ -51,6 +53,7 @@
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "node-mocks-http": "^1.15.1",
