--- a/ui/package.json
+++ b/ui/package.json
@@ -76,6 +76,7 @@
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.9.5",
     "undici": "^6.19.8",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
