--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "A simple task management app",
   "main": "app.ts",
   "scripts": {
-    "start": "ts-node ./app.ts",
+    "start": "node ./dist/app.js",
     "dev": "nodemon --watch . --exec \"npx ts-node\" ./app.ts",
     "build": "npx tsc",
     "test": "jest"
@@ -40,7 +40,8 @@
     "swagger-ui-express": "^5.0.1",
     "tedious": "^18.6.1",
     "uuid": "^10.0.0",
-    "winston": "^3.13.1"
+    "winston": "^3.13.1",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -54,7 +55,6 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^10.0.0",
-    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "node-mocks-http": "^1.15.1",
     "nodemon": "^3.1.4",
