--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,11 @@
     "start": "node ./dist/app.js",
     "dev": "nodemon --watch . --exec \"npx ts-node\" ./app.ts",
     "build": "npx tsc",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "npm run build"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
