--- a/.github/workflows/main_task-manager-dev.yml
+++ b/.github/workflows/main_task-manager-dev.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - task-manager-dev
 
 on:
@@ -14,21 +11,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '20.x'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - name: Install dependencies
+        working-directory: ./api
+        run: npm install
+
+      - name: Build the application
+        working-directory: ./api
+        run: npm run build
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd ./api
+          zip -r ../release.zip . -x '*.git*' -x 'node_modules/*' -x 'tests/*'
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
