Backspace to remove checklist item

--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -1,11 +1,15 @@
 {
-  "short_name": "Tasks",
   "name": "Tasks",
+  "short_name": "Tasks",
   "description": "Manage your tasks",
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#39588A",
+  "background_color": "#FBF6F4",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "96x96",
       "type": "image/x-icon"
     },
     {
@@ -18,9 +22,5 @@
       "type": "image/png",
       "sizes": "512x512"
     }
-  ],
-  "start_url": "/",
-  "display": "standalone",
-  "theme_color": "#39588A",
-  "background_color": "#FBF6F4"
+  ]
 }
