--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "start": "node ./dist/app.js",
-    "dev": "dotenv -e .env -- nodemon --watch . --exec \"npx ts-node\" ./app.ts",
+    "dev": "dotenv -e .env -- nodemon --watch . -r tsconfig-paths/register --exec \"npx ts-node\" ./app.ts",
     "build": "tsc",
     "test": "jest --watchAll --coverage --transformIgnorePatterns \"node_modules/(?!msw)/\""
   },
@@ -52,10 +52,10 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.7.5",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
@@ -67,6 +67,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2"
   }
 }
