--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,11 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "build:production": "node scripts/build.js --env production",
-    "test": "node scripts/test.js --watchAll --coverage --transformIgnorePatterns \"node_modules/(?!msw)/\""
+    "test": "node scripts/test.js --watchAll --coverage --transformIgnorePatterns \"node_modules/(?!msw)/\"",
+    "capacitor:build": "npm run build && npx cap copy",
+    "capacitor:sync": "npm run build && npx cap sync",
+    "capacitor:open:android": "npx cap open android",
+    "capacitor:open:ios": "npx cap open ios"
   },
   "eslintConfig": {
     "extends": [
@@ -89,6 +93,10 @@
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/cli": "^6.1.2",
+    "@capacitor/core": "^6.1.2",
+    "@capacitor/ios": "^6.1.2",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
