Password recovery API

--- a/api/.env.test
+++ b/api/.env.test
@@ -3,8 +3,8 @@ CORS_ALLOWED_ORIGINS=*
 PORT=8080
 ENCRYPTION_KEY=PfjDivUJXosQLsTz73UKXvQpc+UKFVxdLp3JSXCzcPE=
 RESET_PASSWORD_TOKEN_EXPIRATION=3600000
-EMAIL_FROM=victor@gago.works
-SENDGRID_API_KEY=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
+EMAIL_FROM=<valid_sender_email>
+SENDGRID_API_KEY=
 
 # Database provider settings (choose one from below)
 DB_QUERY_LOGGING=false
