Unit tests for mail services

--- a/api/.env.sample
+++ b/api/.env.sample
@@ -4,7 +4,7 @@ PORT=8080
 ENCRYPTION_KEY=<encryption_key>
 RESET_PASSWORD_TOKEN_EXPIRATION=3600000
 EMAIL_FROM=<valid_sender_email>
-SENDGRID_API_KEY=
+SENDGRID_API_KEY=<sendgrid_api_key>
 
 # Database provider settings (choose one from below)
 DB_QUERY_LOGGING=false
