Experiment with threejs

--- a/ui/package.json
+++ b/ui/package.json
@@ -155,11 +155,13 @@
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
+    "seedrandom": "^3.0.5",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
+    "three": "^0.169.0",
     "typescript": "^4.9.5",
     "undici": "^6.19.8",
     "uuid": "^10.0.0",
