--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:20-bullseye AS build
 WORKDIR /usr/src/app
-COPY package*.json ./
+COPY package*.json tsconfig.json ./
 RUN npm install
 COPY . .
 RUN npm run build
