revert tsconfig.json

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -13,10 +13,11 @@
     "typeRoots": ["./node_modules/@types", "./types"],
     "baseUrl": ".",
     "paths": {
-      "@src/*": ["./src/*"]
+      "@src/*": ["src/*"]
     },
     "sourceMap": true,
     "types": ["jest"]
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
